# cmake-examples

01-basic/A-hello-cmake/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: CMakeLists.txt
